<resources>
    <string name="app_name">Yeebum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="take_control_of_your_yeelight">Take Control of your Yeelight</string>
    <string name="yellight_icon">yellight_icon</string>
    <string name="add_bulb">Add Bulb</string>
    <string name="back_button">back_button</string>
    <string name="enter_your_yeelight_data">Enter your yeelight data</string>
    <string name="yeelight_ip">Yeelight Ip</string>
    <string name="yeelight_port">Yeelight Port</string>
    <string name="how_to_get_these_data_check_this">How to get these data? Check this</string>
    <string name="welcome">Welcome</string>
    <string name="settings_icon">settings_icon</string>
    <string name="timer_icon">timer_icon</string>
    <string name="power_icon">power_icon</string>
    <string name="strength">Temp</string>
    <string name="hue">Hue</string>
    <string name="duration">Duration</string>
    <string name="add">add</string>
    <string name="enter">enter</string>
    <string name="flows">Flows</string>
    <string name="color">Color</string>
    <string name="choose_action">Choose Action</string>
    <string name="add_action">Add Action</string>
    <string name="enter_name">Enter Name</string>
    <string name="flow_name">Flow Name</string>
    <string name="next">Next</string>
    <string name="yeelight_name">Yeelight Name</string>
    <string name="enter_when_you_had_the_bug">Enter more information about the bug (when you had it, what\'s going on etc..)</string>
    <string name="report">Report</string>
    <string name="icon">icon</string>
    <string name="refresh">refresh</string>
</resources>