<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:scaleY="-1"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/yellight_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/enter_your_yeelight_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/rounded_stroke_bg_15"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/yeelight_ip"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="30dp"
        android:paddingTop="18dp"
        android:paddingEnd="30dp"
        android:paddingBottom="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/rounded_stroke_bg_15"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/yeelight_port"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="30dp"
        android:paddingTop="18dp"
        android:paddingEnd="30dp"
        android:paddingBottom="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


    <TextView
        android:id="@+id/checkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/how_to_get_these_data_check_this"
        android:textAlignment="center"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_bg_15"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/add_bulb"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>