<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".screens.flows_control.EnterActionNameFragment">


    <ImageView
        android:id="@+id/enterNameBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back_button"
        android:scaleY="-1"
        android:src="@drawable/ic_back"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/enter_name"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/flowNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:background="@drawable/rounded_stroke_bg_15"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/flow_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="30dp"
        android:paddingTop="18dp"
        android:paddingEnd="30dp"
        android:paddingBottom="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/nameNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_bg_15"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>