<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".screens.WelcomeFragment">

    <ImageView
        android:id="@+id/xd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/yellight_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:text="@string/take_control_of_your_yeelight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_regular"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="Lorem ipsum dolor sit amet, consectetur
adipiscing elit. Maecenas scelerisque est in urna
scelerisque, vitae lacinia sem ultricies."
            android:textAlignment="center"
            android:textColor="@color/lightGray"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/welcomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/rounded_bg_15"
            android:paddingTop="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="20dp"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/let_s_get_started"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>