<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".screens.other.BugReportFragment">

    <Button
        android:id="@+id/saveBulbButton2"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_bg_15"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/report"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/enterBulbDataBackButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back_button"
        android:scaleY="-1"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="Report a bug"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/enterBulbDataBackButton2"
        app:layout_constraintTop_toBottomOf="@+id/enterBulbDataBackButton2" />


    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="top"
        android:background="@drawable/rounded_stroke_bg_15"
        android:hint="@string/enter_when_you_had_the_bug"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textCursorDrawable="@null"
        android:textColorHint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/saveBulbButton2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        android:autofillHints=""
        android:maxLines="100"
         />


</androidx.constraintlayout.widget.ConstraintLayout>