<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".screens.bulb_control.ControlFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/controlSettingsButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="My Yeelight"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/controlSettingsButton"
            app:layout_constraintEnd_toStartOf="@+id/controlSettingsButton"
            app:layout_constraintStart_toEndOf="@+id/controlDrawerButton"
            app:layout_constraintTop_toTopOf="@+id/controlSettingsButton" />

        <ImageView
            android:id="@+id/controlDrawerButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/ic_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/flowsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/flows"
            android:padding="10dp"
            android:textColor="#44FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/colorText"
            app:layout_constraintTop_toTopOf="@+id/colorText" />

        <TextView
            android:id="@+id/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/flowsText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/controlViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorText"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>