<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".screens.AddActionFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back_button"
        android:scaleY="-1"
        android:src="@drawable/ic_back"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/choose_action"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Brightness Action"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_enter"
            app:tint="@color/white"
            android:contentDescription="@string/enter" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4C4C4C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Color Action"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_enter"
            app:tint="@color/white"
            android:contentDescription="@string/enter" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4C4C4C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Pause Action"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_enter"
            app:tint="@color/white"
            android:contentDescription="@string/enter" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4C4C4C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Color Temp Action"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_enter"
            app:tint="@color/white"
            android:contentDescription="@string/enter" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4C4C4C" />


</LinearLayout>