<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".screens.flows_control.ActionPauseDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">


        <ImageView
            android:id="@+id/actionDetailsBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/back_button"
            android:scaleY="-1"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Pause Action"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionDetailsBackButton" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Duration"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="m"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/minutePicker"
            app:layout_constraintEnd_toStartOf="@+id/secondsPicker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minutePicker"
            app:layout_constraintTop_toTopOf="@+id/minutePicker"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="s"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/secondsPicker"
            app:layout_constraintEnd_toStartOf="@+id/millisecondsPicker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/secondsPicker"
            app:layout_constraintTop_toTopOf="@+id/secondsPicker"
            app:layout_constraintVertical_bias="0.496" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="ss"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/millisecondsPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/millisecondsPicker"
            app:layout_constraintTop_toTopOf="@+id/millisecondsPicker"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_timer"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.5"
            app:tint="@color/white" />

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hello_blank_fragment"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <NumberPicker
            android:id="@+id/secondsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/hello_blank_fragment"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <NumberPicker
            android:id="@+id/millisecondsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"

            android:layout_marginTop="16dp"
            android:text="@string/hello_blank_fragment"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/addNewActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_bg_15"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/add_action"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondsPicker"
            app:layout_constraintVertical_bias="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>